# Function-Approx

./: CMakeLists.txt  README.md  gen_data.cpp  gen_data.h  main.cpp  trainer.cpp  trainer.h
